--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -1,5 +1,13 @@
-extends layout
-block content
- h1 Welcome to Family budget application 
- p User Report 
- 
+ html
+    head
+    script.
+        // Sets the usernames of the current user to be displayed site-wide
+        function setUsername(username){
+          // ...
+        }
+        var number = #{number};
+        var username = "#{username}";
+        setUsername(username);
+
+    body 
+        p Welcome  to my site!
