change done for the report

--- a/app/views/expenses.pug
+++ b/app/views/expenses.pug
@@ -12,4 +12,4 @@ table(style='width:50%', border='1')
             td #{expense.amount_GBP}
             td #{expense.expense_date}
             td #{expense.description}
-            
+p The total is #{user.expenses.slice(-1)[0][0]["total"]} 
