changes done for the income and total (Zenepe)

--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -1,5 +1,9 @@
-extends layout
-block content
- h1 Welcome to Family budget application 
- p User Report 
- 
+doctype  
+html  
+    head  
+        title Family Budget Web Application
+    body  
+        h1 Welcome To Family Budget Web Application  
+
+
+
