--- a/app/views/income.pug
+++ b/app/views/income.pug
@@ -12,4 +12,4 @@ table(style='width:50%', border='1')
       td #{income.i_category}
       td #{income.i_amount_GBP}
       td #{income.i_date}
-p The total is #{user.income.slice(-1)[0][0]["total"]}
+p Total income is #{user.income.slice(-1)[0][0]["total"]}
