--- a/app/views/report.pug
+++ b/app/views/report.pug
@@ -1,4 +1,21 @@
-p The total expenses is #{user.report.expense_total[0]["total"]}
-p The total income is #{user.report.income_total[0]["total"]}
+<!DOCTYPE html>
+<html>
+<body style="background-color:powderblue;">
 
-p The savings of the month is #{user.report.income_total[0]["total"] - user.report.expense_total[0]["total"]}
+<h1>REPORT (MONTHLY)</h1>
+
+table(style='width:50%', border='1')
+    tr 
+        th EXPENSES                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 
+        th INCOME 
+        th SAVINGS
+    each report in user.report 
+        tr
+            td #{user.report.expense_total[0]["total"]}
+            td #{user.report.income_total[0]["total"]}
+            td #{user.report.income_total[0]["total"] - user.report.expense_total[0]["total"]}
+p.total The total expenses is = #{user.report.expense_total[0] ['total']}
+p.total The total (GBP) = #{user.report.income_total[0] ['total']}
+
+
+p The savings of the month is #{user.report.income_total [0] ["total"] - user.report.expense_total [0] ["total"]}
