Fixed bugs, added semicolon

--- a/app/views/report.pug
+++ b/app/views/report.pug
@@ -72,4 +72,7 @@ head
 p.total The total expenses is = #{user.report.expense_total[0] ['total']}
 p.total The total (GBP) = #{user.report.income_total[0] ['total']}
 
-p.total The savings of the month is = #{user.report.income_total [0] ["total"] - user.report.expense_total [0] ["total"]}
+- var savings = user.report.income_total [0] ["total"] - user.report.expense_total [0] ["total"];
+- savings = savings.toFixed(2);
+
+p.total The savings of the month is = #{savings}
