--- a/app/views/user.pug
+++ b/app/views/user.pug
@@ -1,14 +1,209 @@
-extends layout
-block content
-  h1 Add income about this user 
-  form(action='/add-income', method='POST')
-    input(type='hidden' name='id' value=user.id)
-    textarea(name='income' rows=6 cols=50)
-    <div>
-    input(type='submit' value='Submit')
-  form(action='/allocate-category', method='POST')
-    input(type='hidden' name='id' value=user.id)
-    select(name='category')
-      for category in categories
-        option(value=category.id) #{category.name}
-    
+doctype html
+html 
+  head
+    title(Side)
+    link(rel='stylesheet' type='text/css' href='/static/css/style.css')
+style.
+  *{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+  font-family: Verdana;
+
+  }
+
+  body{
+    background-color: #ffffff;
+  }
+
+  .wrapper{
+    display: flex;
+    position: relative;
+  }
+
+  .wrapper .sidebar{
+    width: 200px;
+    height: 100%;
+    background: #e2e2e2;
+    padding: 30px 0px;
+    position: fixed;
+  }
+
+  .wrapper .sidebar h2{
+    color: rgb(0, 0, 0);
+    text-transform: uppercase;
+    font-size: 15px;
+    padding: 15px;
+    margin-bottom: 30px;
+  }
+
+  .wrapper .sidebar ul li{
+    text-transform: uppercase;
+    padding: 15px;
+    border-bottom: 1px solid #322670;
+    border-bottom: 1px solid rgba(0,0,0,0.05);
+    border-top: 1px solid rgba(255,255,255,0.05);
+    font-size: 10px;
+  }    
+
+  .wrapper .sidebar ul li a{
+    color: #000000;
+    display: block;
+  }
+
+  .wrapper .sidebar ul li:hover{
+    background-color: #fd631c;
+    color: #ffffff;
+  }
+
+  .wrapper .sidebar ul li:hover a{
+    color: rgb(255, 255, 255);
+  }
+
+  .wrapper .main_content{
+    width: 100%;
+    margin-left: 200px;
+    color: #ffffff;
+  }
+
+  .row1{
+    display: flex;
+    flex-direction: row;
+  }
+
+  .wrapper .main_content .row1 .expenses .expense-form .button{
+    padding: 40px;
+    margin-top: 20px;
+  }
+
+  .wrapper .main_content .row1 .income .income-form .income-button{
+    padding: 40px;
+    margin-top: 20px;
+  }
+
+  .wrapper .main_content .row1 .expenses .expense-form{
+    font-size: 20px;
+    margin: 20px;
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+  }
+
+  .wrapper .main_content .row1 .income .income-form{
+    font-size: 15px;
+    margin: 20px;
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+  }
+
+  .wrapper .main_content .header{
+    padding: 20px;
+    background: #fff;
+    color: #717171;
+    border-bottom: 1px solid #e0e4e8;
+    text-align: right;
+    font-size: 20px;
+  }
+
+
+  .wrapper .main_content .row1 .expenses{
+    width: 300px;
+    font: 10px; 
+    text-align:center;
+    font-size:10px;
+    margin: 20px;
+    padding: 10px;
+    background-color: #fd631c;
+    box-shadow: 0px 5px 5px 0px #0000003b;
+
+  }
+
+  .wrapper .main_content .row1 .income{
+    width: 300px;
+    font: 10px; 
+    text-align:center;
+    font-size:10px;
+    margin: 20px;
+    padding: 10px;
+    background-color: #fd631c;
+    box-shadow: 0px 5px 5px 0px #0000003b;
+
+  }
+
+  .wrapper .main_content .row1 .expenses .report{
+    padding: 10px;
+    text-align:center;
+    font-size:12px;
+
+  }
+
+  .wrapper .main_content .row1 .expenses .expense-form .expense-input{
+    padding: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+
+  .wrapper .main_content .row1 .income .income-form .income-input{
+    padding: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+
+
+body 
+div(class="wrapper")
+  div(class="sidebar")
+
+  div(class="main_content")
+    div(class="header") Hi User #{user.user_id}
+
+    div(class="row1")
+      //expenses
+      div(class="expenses")
+        h2(class="expense-header") Add Expenses 
+          form(action='/add-expenses' method='POST' class = "expense-form")
+          input(type='hidden' name='id' value=user.user_id)
+          input(type="text" name='description' placeholder= "Expenses description" class = "expense-input")
+          input(type="number" name='amount_GBP' placeholder= "amount in numbers e.g 1000" class = "expense-input")
+          input(type="date" name='expense_date' placeholder= "date in YYYY-MM-DD" class = "expense-input")
+      div 
+        label(for="expenses") Choose a category:
+          select(name="category")
+            option(value="Shopping") Shopping
+            option(value="Food and Drink") Food and Drink
+            option(value="Transportation") Transportation
+            option(value="Charity") Charity
+            option(value="Utilities") Utilities
+            option(value="Insurance") Insurance
+            option(value="Entertainment") Entertainment
+            option(value="Communication") Communication 	
+
+          input(type='submit' class="income-button" value='Add Expenses')
+
+      div 
+
+      //income
+
+      div(class="income")
+        h2(class="income-header") Add Income
+          form(action='/add-income' method='POST' class = "income-form")
+            input(type='hidden' name='id' value=user.user_id)
+            input(type="number" name='i_amount_GBP' placeholder= "amount in numbers e.g 1000" class = "income-input")
+            input(type="date" name='i_date' placeholder= "date in YYYY-MM-DD" class = "income-input")
+      div 
+        label(for="income") Choose category
+          select(name="category")
+            option(value="Salary") Salary
+            option(value="Gift") Gift
+            option(value="Other") Other
+            option(value="Profit") Profit
+            option(value="Savings") Savings
+
+        input(type='submit' class="button-income" value='Add Income')
+
+
